refactor dto and auth process
