# docs/swagger.json
@@ -29,7 +29,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.JwtResponse"
+                                            "$ref": "#/definitions/dto.LoginResponse"
                                         }
                                     }
                                 }
@@ -158,11 +158,8 @@
         }
     },
     "definitions": {
-        "dto.JwtResponse": {
+        "dto.LoginResponse": {
             "type": "object",
-            "required": [
-                "access"
-            ],
             "properties": {
                 "access": {
                     "type": "string"
