# models/dto/auth.go
@@ -10,3 +10,12 @@ type RegisterResponse struct {
 	Username string
 	Email    string
 }
+
+type Login struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginResponse struct {
+	Access string `json:"access"`
+}
